[SPARK-56504][SQL] Fix Java lint for join pushdown API